--- a/src/style.css
+++ b/src/style.css
@@ -31,9 +31,33 @@
 }
 
 .ship {
-  background-color: black;
+  background-color: darkslateblue;
 }
 
 .hit-ship {
-  background-color: red;
+  background-color: tomato;
+}
+
+.sunk-ship {
+  background-color: darkred ;
+}
+
+.modal {
+  /* display: none; */
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
 }
