--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,16 @@
 #app {
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.controls {
+  display: grid;
+  place-content: center;
+}
+
+.boards {
+  display: flex;
   justify-content: space-around;
 }
 
@@ -42,22 +53,15 @@
   background-color: darkred ;
 }
 
-.modal {
-  /* display: none; */
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.4);
-}
+@media only screen and (max-width: 768px) {
+  .boards {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
 
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+  .board {
+    height: 300px;
+    width: 300px;
+  }
 }
