--- a/src/style.css
+++ b/src/style.css
@@ -7,11 +7,13 @@
 .controls {
   display: grid;
   place-content: center;
+  margin-top: 8px;
 }
 
 .boards {
   display: flex;
   justify-content: space-around;
+  gap: 10px;
 }
 
 .board {
@@ -53,6 +55,33 @@
   background-color: darkred ;
 }
 
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  font-family: sans-serif;
+  border-radius: 5px;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 2px solid black;
+  box-shadow: 3px 3px;
+  width: 30%; /* Could be more or less, depending on screen size */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media only screen and (max-width: 768px) {
   .boards {
     flex-direction: column;
@@ -63,5 +92,9 @@
   .board {
     height: 300px;
     width: 300px;
+  }
+
+  .modal {
+    padding-top: 50%;
   }
 }
